--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,8 @@
   <author email="davetcoleman@gmail.com">Dave Coleman</author>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <depend>rviz</depend>
   <depend>sensor_msgs</depend>
